--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ build/Release
 # Dependency directories
 node_modules
 .idea
-db.sqlite
-db_test.sqlite
+numbers.db
+numbers_test.db
 jspm_packages
 
 # Optional npm cache directory
