--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^2.3.0",
     "knex": "^0.12.6",
     "lodash": "^4.13.1",
+    "marked": "^0.3.6",
     "moment": "^2.15.1",
     "os": "^0.1.1",
     "sqlite3": "^3.1.8"
